--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^6.0.0",
     "astro": "^5.4.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
